--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   firebase_core: ^2.31.0
   cloud_firestore: ^4.17.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +93,6 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 
-dependency_overrides:
-  leak_tracker_flutter_testing: 3.0.5
-  leak_tracker_testing: 3.0.1
+# dependency_overrides:
+#   leak_tracker_flutter_testing: 3.0.5
+#   leak_tracker_testing: 3.0.1
