--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_auth: ^4.19.5
   provider: ^6.1.2
   firebase_core: ^2.31.1
+  image_picker: ^1.1.1
+  firebase_storage: ^11.7.6
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
