--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   cloud_firestore: ^4.17.3
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
