--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   table_calendar: ^3.1.1
-
+  qr_flutter: ^4.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +39,9 @@ dependencies:
   provider: ^6.1.2
   cloud_firestore: ^4.17.3
   flutter_datetime_picker: ^1.5.1
+  image_picker: ^1.1.1
+  firebase_storage: ^11.7.6
+
 
 dev_dependencies:
   flutter_test:
