--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   image_picker: ^1.1.1
   firebase_storage: ^11.7.6
+  firebase_auth: ^4.19.6
+
+  permission_handler: ^11.3.1
+  firebase_core: ^2.31.1
+
 
 
 dev_dependencies:
