--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.1.1
   firebase_storage: ^11.7.6
   permission_handler: ^11.3.1
+  firebase_app_check: ^0.2.2+7
 
 dev_dependencies:
   flutter_test:
